@@ -33,7 +33,7 @@ struct z_stream_s;
 
 
 //			SERVER TO CLIENT
-#ifdef _MSC_VER
+#if defined(_MSC_VER) || defined(__SUNPRO_CC)
 #pragma pack(1)
 #endif
 struct Header_Struct{
@@ -41,28 +41,28 @@ struct Header_Struct{
 	int32	packetlength;
 	int8	command;
 }
-#ifdef _MSC_VER
+#if defined(_MSC_VER) || defined(__SUNPRO_CC)
 ;
 #pragma pack()
 #else
 __attribute__((__packed__));
 #endif
 
-#ifdef _MSC_VER
+#if defined(_MSC_VER) || defined(__SUNPRO_CC)
 #pragma pack(1)
 #endif
 struct UDP_Header_Struct {
 	int8	eDonkeyID;
 	int8	command;
 }
-#ifdef _MSC_VER
+#if defined(_MSC_VER) || defined(__SUNPRO_CC)
 ;
 #pragma pack()
 #else
 __attribute__((__packed__));
 #endif
 
-#ifdef _MSC_VER
+#if defined(_MSC_VER) || defined(__SUNPRO_CC)
 ;
 #pragma pack(1)
 #endif
@@ -73,7 +73,7 @@ struct Requested_Block_Struct{
 	unsigned char	FileID[16];
 	uint32  transferred; // Barry - This counts bytes completed
 }
-#ifdef _MSC_VER
+#if defined(_MSC_VER) || defined(__SUNPRO_CC)
 ;
 #pragma pack()
 #else
@@ -85,7 +85,7 @@ struct Requested_File_Struct{
 	uint32	  lastasked;
 	uint8	  badrequests;
 }
-#ifdef _MSC_VER
+#if defined(_MSC_VER) || defined(__SUNPRO_CC)
 ;
 #pragma pack()
 #else
@@ -105,7 +105,7 @@ struct Gap_Struct{
 	uint64 end;
 };
 
-#ifdef _MSC_VER
+#if defined(_MSC_VER) || defined(__SUNPRO_CC)
 #pragma pack(1)
 #endif
 struct ServerMet_Struct {
@@ -113,7 +113,7 @@ struct ServerMet_Struct {
 	uint16	port;
 	uint32	tagcount;
 }
-#ifdef _MSC_VER
+#if defined(_MSC_VER) || defined(__SUNPRO_CC)
 ;
 #pragma pack()
 #else
@@ -128,7 +128,7 @@ struct TransferredData {
 
 //Kry import of 0.30d 
 // Maella -Enhanced Chunk Selection- (based on jicxicmic)
-#ifdef _MSC_VER
+#if defined(_MSC_VER) || defined(__SUNPRO_CC)
 #pragma pack(1)
 #endif
 struct Chunk {
@@ -138,7 +138,7 @@ struct Chunk {
 			uint16 rank;      // Download priority factor (highest = 0, lowest = 0xffff)
 	};
 }
-#ifdef _MSC_VER
+#if defined(_MSC_VER) || defined(__SUNPRO_CC)
 ;
 #pragma pack()
 #else
